Update JVM arguments in Maven Surefire plugin configuration
Removed the `--illegal-access=warn` flag, as it is no longer supported in Java 17+.
Added`--add-opens java.base/java.util=ALL-UNNAMED` for x-stream compatibility